# muAlphaSim

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  debug_multithread.py  grid_sweep.py  ionization_histograms.py  mualpha_statistics.nb  sweep_offset.py  vis.mac
grid_sweep/: analyze_grid.py
grid_sweep/nx1_ny1/: geometry.json
grid_sweep/nx1_ny2/: geometry.json
grid_sweep/nx1_ny3/: geometry.json
grid_sweep/nx1_ny4/: geometry.json
grid_sweep/nx1_ny5/: geometry.json
grid_sweep/nx2_ny1/: geometry.json
grid_sweep/nx2_ny2/: geometry.json
grid_sweep/nx2_ny3/: geometry.json
grid_sweep/nx2_ny4/: geometry.json
grid_sweep/nx2_ny5/: geometry.json
grid_sweep/nx3_ny1/: geometry.json
grid_sweep/nx3_ny2/: geometry.json
include/: ActionInitialization.hh  ConeCombBuilder.hh  DataLogger.hh  DetectorConstruction.hh  EventAction.hh  GeometryConfig.hh  GeometryConfigJSON.old head  HistogramManager.hh  MuAlpha5p.hh  MuAlphaStepLimiterPhysics.hh  PhysicsList.hh  PrimaryGenerator.hh  RateTable2D.hh  RateTableSingleton.hh  RevolvedFieldFromPOS.hh  RevolvedG4Field.hh  RunAction.hh  SteppingAction.hh
muonic_atom/: dirac_bound_state_solver.py  dirac_hydrogenic.py  muonic_atom.py
src/: ActionInitialization.cc  ConeCombBuilder.cc  DataLogger.cc  DetectorConstruction.cc  EventAction.cc  GeometryConfig.cc  HistogramManager.cc  MuAlpha5p.cc  MuAlphaStepLimiterPhysics.cc  PhysicsList.cc  PrimaryGenerator.cc  RateTable2D.cc  RevolvedFieldFromPOS.cc  RevolvedG4Field.cc  RunAction.cc  SteppingAction.cc  main copy.backup  main.cc
(+16 files in other folders)
